--- a/index.html
+++ b/index.html
@@ -34,47 +34,117 @@
 <body>
 
   <!--==========================
-    Header
+    菜单栏
   ============================-->
   <header id="header">
     <div id="logo" class="pull-left">
-      <ul class="nav-menu"></ul>
-      <a href="#intro"><img src="img/logo-feifan.png" alt="" height="50" /></a>
+      <ul class="nav-menu menu-active">
+        <a href="#intro"><img src="img/logo-feifan.png" alt="" height="50" /></a>
       </ul>
     </div>
     <div class="container-fluid">
 
       <nav id="nav-menu-container">
         <ul class="nav-menu menu-active">
-          <li><a href="#intro">简介</a></li>
-          <li><a href="#about">优势</a></li>
-          <li><a href="#services">服务</a></li>
-          <li><a href="#portfolio">环境</a></li>
-          <li><a href="#team">团队</a></li>
-          <li><a href="#clients">合作伙伴</a></li>
 
-          <li class="menu-has-children"><a href="">成品展示</a>
-            <ul>
-              <li><a href="server.html#section-11">软件定制</a></li>
-              <li><a href="server.html#section-22">软件外包</a></li>
-              <li><a href="server.html#section-33">网站系统</a></li>
-              <li><a href="server.html#section-44">移动应用</a></li>
-              <li><a href="server.html#section-55">电商平台</a></li>
-              <li><a href="server.html#section-66">运维服务</a></li>
+          <li class="menu-has-children"><a href="#intro">简介</a>
+            <ul style="border-radius: 10px;">
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
             </ul>
           </li>
-          <li><a href="#footer">联系我们</a></li>
+
+          <li class="menu-has-children"><a href="#about">优势</a>
+            <ul style="border-radius: 10px;">
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+            </ul>
+          </li>
+
+          <li class="menu-has-children"><a href="#services">服务</a>
+            <ul style="border-radius: 10px;">
+              <li><a href="services.html#section-11">软件定制</a></li>
+              <li><a href="services.html#section-22">软件外包</a></li>
+              <li><a href="services.html#section-33">网站系统</a></li>
+              <li><a href="services.html#section-44">移动应用</a></li>
+              <li><a href="services.html#section-55">电商平台</a></li>
+              <li><a href="services.html#section-66">运维服务</a></li>
+            </ul>
+          </li>
+
+          <li class="menu-has-children"><a href="#portfolio">环境</a>
+            <ul style="border-radius: 10px;">
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+            </ul>
+          </li>
+
+          <li class="menu-has-children"><a href="#team">团队</a>
+            <ul style="border-radius: 10px;">
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+            </ul>
+          </li>
+
+          <li class="menu-has-children"><a href="#clients">合作伙伴</a>
+            <ul style="border-radius: 10px;">
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+            </ul>
+          </li>
+
+          <li class="menu-has-children"><a href="presentation.html">成品展示</a>
+            <ul style="border-radius: 10px;">
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+            </ul>
+          </li>
+
+          <li class="menu-has-children"><a href="#footer">联系我们</a>
+            <ul style="border-radius: 10px;">
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+              <li><a href="">等待添加</a></li>
+            </ul>
+          </li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
 
   <!--==========================
-    Intro Section
+    轮播图内容
   ============================-->
   <section id="intro">
     <div class="intro-container">
-      <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
+      <div id="introCarousel" class="carousel slide carousel-fade" data-ride="carousel">
 
         <ol class="carousel-indicators"></ol>
 
@@ -110,17 +180,17 @@
             </div>
           </div>
 
-
         </div>
+
 
         <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
+          <span class="sr-only">上一页</span>
         </a>
 
         <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
           <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
+          <span class="sr-only">下一页</span>
         </a>
 
       </div>
@@ -130,7 +200,7 @@
   <main id="main">
 
     <!--==========================
-      Featured Services Section
+      企业特点
     ============================-->
     <section id="featured-services">
       <div class="container">
@@ -142,7 +212,7 @@
             <p class="description">企业员工自发建设</p>
           </div>
 
-          <div class="col-lg-4 box box-bg">
+          <div class="col-lg-4 box">
             <i class="ion-ios-stopwatch-outline"></i>
             <h4 class="title"><a href="">无定时打卡</a></h4>
             <p class="description">企业并不要求打卡制工作</p>
@@ -161,7 +231,7 @@
     <!--==========================
       我们的优势
     ============================-->
-    <section id="about">
+    <section id="about" style="background-image: url('img/about-bg.jpg');">
       <div class="container">
 
         <header class="section-header">
@@ -175,9 +245,11 @@
             <div class="about-col">
               <div class="img">
                 <img src="img/about-mission.jpg" alt="" class="img-fluid">
-                <div class="icon"><i class="ion-android-time"></i></div>
+                <div class="icon">
+                  <a href=""><i class="ion-android-time"></i></a>
+                </div>
               </div>
-              <h2 class="title"><a href="#">交付按时</a></h2>
+              <h2 class="title"><a href="">交付按时</a></h2>
               <p style="text-align: center">
                 按时交付，精准把控质量
               </p>
@@ -188,9 +260,11 @@
             <div class="about-col">
               <div class="img">
                 <img src="img/about-plan.jpg" alt="" class="img-fluid">
-                <div class="icon"><i class="ion-ios-list-outline"></i></div>
+                <div class="icon">
+                  <a href=""><i class="ion-ios-list-outline"></i></a>
+                </div>
               </div>
-              <h2 class="title"><a href="#">合理方案</a></h2>
+              <h2 class="title"><a href="">合理方案</a></h2>
               <p style="text-align: center">
                 量身定制，开发合理方案
               </p>
@@ -201,9 +275,11 @@
             <div class="about-col">
               <div class="img">
                 <img src="img/about-vision.jpg" alt="" class="img-fluid">
-                <div class="icon"><i class="ion-social-foursquare-outline"></i></div>
+                <div class="icon">
+                  <a href=""><i class="ion-social-foursquare-outline"></i></a>
+                </div>
               </div>
-              <h2 class="title"><a href="#">可靠质量</a></h2>
+              <h2 class="title"><a href="">可靠质量</a></h2>
               <p style="text-align: center">
                 打磨细节，注重产品质量
               </p>
@@ -229,34 +305,46 @@
         <div class="row">
 
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
+            <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
             <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-            <h4 class="title"><a href="">网站系统</a></h4>
+            <h4 class="title"><a href="services.html#section-33">网站系统</a></h4>
             <p class="description">大型数据库后台管理系统</p>
+          </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
+            <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
             <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-            <h4 class="title"><a href="">移动应用</a></h4>
-            <p class="description">移动端App</p>
+            <h4 class="title"><a href="services.html#section-44">移动应用</a></h4>
+            <p class="description">移动端App开发</p>
+          </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
+            <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
             <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-            <h4 class="title"><a href="">软件定制</a></h4>
+            <h4 class="title"><a href="services.html#section-11">软件定制</a></h4>
             <p class="description">定制企业软件</p>
+          </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+            <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
             <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-            <h4 class="title"><a href="">O2O平台</a></h4>
+            <h4 class="title"><a href="services.html#section-55">电商平台</a></h4>
             <p class="description">电商平台软件开发</p>
+          </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+            <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
             <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
-            <h4 class="title"><a href="">运维服务</a></h4>
+            <h4 class="title"><a href="services.html#section-66">运维服务</a></h4>
             <p class="description">企业后台运行维护</p>
+          </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
+            <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
             <div class="icon"><i class="ion-ios-people-outline"></i></div>
-            <h4 class="title"><a href="">软件外包</a></h4>
+            <h4 class="title"><a href="services.html#section-22">软件外包</a></h4>
             <p class="description">兼顾合作企业开发</p>
+          </ul>
           </div>
 
         </div>
@@ -317,9 +405,9 @@
           </div>
 
           <div class="progress">
-            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="74" aria-valuemin="0"
+            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="89" aria-valuemin="0"
               aria-valuemax="100">
-              <span class="skill">JavaScript <i class="val">74%</i></span>
+              <span class="skill">JavaScript <i class="val">89%</i></span>
             </div>
           </div>
 
@@ -469,7 +557,7 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 wow fadeInUp">
-            <div class="member">
+            <div class="member" style="box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);">
               <img src="img/team-1.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
@@ -486,7 +574,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-            <div class="member">
+            <div class="member" style="box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);">
               <img src="img/team-2.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
@@ -503,7 +591,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.2s">
-            <div class="member">
+            <div class="member" style="box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);">
               <img src="img/team-3.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
@@ -520,7 +608,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-            <div class="member">
+            <div class="member" style="box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);">
               <img src="img/team-4.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
@@ -581,7 +669,7 @@
 
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>相关链接</h4>
-              <ul>
+              <ul class="nav-menu2">
                 <li><i class="ion-ios-arrow-right"></i> <a href="#intro">简介</a></li>
                 <li><i class="ion-ios-arrow-right"></i> <a href="#about">优势</a></li>
                 <li><i class="ion-ios-arrow-right"></i> <a href="#services">服务</a></li>
@@ -608,8 +696,8 @@
 
             <div class="col-lg-3 col-md-6 footer-links">
               <h4>企业招聘</h4>
-              <p>我们著有“伯乐”一称，广招社会贤才，培训应届毕业生。如有意向，请联系我们。</p>
-              <ul>
+              <p>公司著有“伯乐”一称，广招社会贤才，培训就业。如有意向，请联系我们。</p>
+              <ul class="nav-menu2">
                 <li><i class="ion-ios-arrow-right"></i> <a href="#">社会招聘</a></li>
                 <li><i class="ion-ios-arrow-right"></i> <a href="#">校园招聘</a></li>
                 <li><i class="ion-ios-arrow-right"></i> <a href="#">人才培养</a></li>
