--- a/index.html
+++ b/index.html
@@ -306,45 +306,45 @@
 
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
-            <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-            <h4 class="title"><a href="services.html#section-33">网站系统</a></h4>
-            <p class="description">大型数据库后台管理系统</p>
-          </ul>
+              <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
+              <h4 class="title"><a href="services.html#section-33">网站系统</a></h4>
+              <p class="description">大型数据库后台管理系统</p>
+            </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
-            <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
-            <h4 class="title"><a href="services.html#section-44">移动应用</a></h4>
-            <p class="description">移动端App开发</p>
-          </ul>
+              <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
+              <h4 class="title"><a href="services.html#section-44">移动应用</a></h4>
+              <p class="description">移动端App开发</p>
+            </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
             <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
-            <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-            <h4 class="title"><a href="services.html#section-11">软件定制</a></h4>
-            <p class="description">定制企业软件</p>
-          </ul>
+              <div class="icon"><i class="ion-ios-paper-outline"></i></div>
+              <h4 class="title"><a href="services.html#section-11">软件定制</a></h4>
+              <p class="description">定制企业软件</p>
+            </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
-            <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
-            <h4 class="title"><a href="services.html#section-55">电商平台</a></h4>
-            <p class="description">电商平台软件开发</p>
-          </ul>
+              <div class="icon"><i class="ion-ios-speedometer-outline"></i></div>
+              <h4 class="title"><a href="services.html#section-55">电商平台</a></h4>
+              <p class="description">电商平台软件开发</p>
+            </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
-            <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
-            <h4 class="title"><a href="services.html#section-66">运维服务</a></h4>
-            <p class="description">企业后台运行维护</p>
-          </ul>
+              <div class="icon"><i class="ion-ios-barcode-outline"></i></div>
+              <h4 class="title"><a href="services.html#section-66">运维服务</a></h4>
+              <p class="description">企业后台运行维护</p>
+            </ul>
           </div>
           <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-delay="0.1s" data-wow-duration="1.4s">
             <ul style="border-radius: 10px;box-shadow:  0 8px 16px rgba(0, 0, 0, 0.3);width: 95%;height: 70px;">
-            <div class="icon"><i class="ion-ios-people-outline"></i></div>
-            <h4 class="title"><a href="services.html#section-22">软件外包</a></h4>
-            <p class="description">兼顾合作企业开发</p>
-          </ul>
+              <div class="icon"><i class="ion-ios-people-outline"></i></div>
+              <h4 class="title"><a href="services.html#section-22">软件外包</a></h4>
+              <p class="description">兼顾合作企业开发</p>
+            </ul>
           </div>
 
         </div>
@@ -359,7 +359,9 @@
       <div class="container text-center">
         <h3>加入我们吧！</h3>
         <p> 一个人如果咬紧牙关并显示真正的决心，就绝不会失败。</p>
-        <a class="cta-btn" href="#footer">联系我们</a>
+        <ul class="nav-menu2" style="margin-left: -60px;">
+          <a class="cta-btn" href="#footer">联系我们</a>
+        </ul>
       </div>
     </section><!-- #call-to-action -->
 
