--- a/presentation.html
+++ b/presentation.html
@@ -3,9 +3,14 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>非凡科技有限公司-服务项目</title>
+	<meta name="非凡"
+    content="软件定制、软件外包、网站系统、移动端App、O2O平台、运维服务 c c++ c# java html css javascript python sql mysql Oracle Sqlserver hadoop linux centos">
+  <meta name="robots" content="all" />
+  <meta name="author" content="feifancloud" />
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <meta content="" name="keywords">
+  <meta content="" name="description">
+	<title>非凡科技有限公司-成果展示</title>
 	<link rel="stylesheet" href="static/css/bootstrap.min.css">
 	<link rel="stylesheet" href="static/css/animate.css">
 	<link rel="stylesheet" href="static/css/glightbox.min.css">
@@ -20,8 +25,6 @@
 
 	<link href="img/feifanLogo.png" rel="icon">
 	<link href="img/apple-touch-icon.png" rel="apple-touch-icon">
-
-	<!-- Google Fonts //link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Montserrat:300,400,500,700" rel="stylesheet"-->
 
 
 	<!-- Bootstrap CSS File -->
@@ -260,8 +263,6 @@
 
 	<div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
 
-		<ol class="carousel-indicators"></ol>
-
 		<div class="carousel-inner" role="listbox">
 			<div class="carousel-item active" style="background-image: url('img/call-to-action-bg.jpg');">
 				<br />
@@ -283,9 +284,6 @@
 						</div>
 					</div>
 					<hr>
-
-
-
 					<div class="row">
 						<div class="col-xl-3 col-lg-3 col-sm-6 border_1 ">
 							<div class="container">
