--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>非凡科技有限公司-山东日照</title>
+	<title>非凡科技有限公司-服务项目</title>
 	<meta name="非凡"
 		content="软件定制、软件外包、网站系统、移动端App、O2O平台、运维服务 c c++ c# java html css javascript python sql mysql Oracle Sqlserver hadoop linux centos">
 	<meta name="robots" content="all" />
