--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
               <figure>
                 <img src="img/portfolio/envir1.jpg" style="height: 110%;" class="img-fluid" alt="">
                 <a href="img/portfolio/envir1.jpg" data-lightbox="portfolio" data-title="北京市." class="link-preview"
-                  title="Preview"><i class="ion ion-eye"></i></a>
+                  title="查看"><i class="ion ion-eye"></i></a>
                 <a href="#" class="link-details" title="Beijing."><i class="ion ion-android-open"></i></a>
               </figure>
 
@@ -466,7 +466,7 @@
               <figure>
                 <img src="img/portfolio/envir2.jpg" class="img-fluid" alt="">
                 <a href="img/portfolio/envir2.jpg" class="link-preview" data-lightbox="portfolio" data-title="北京市."
-                  title="Preview"><i class="ion ion-eye"></i></a>
+                  title="查看"><i class="ion ion-eye"></i></a>
                 <a href="#" class="link-details" title="Beijing."><i class="ion ion-android-open"></i></a>
               </figure>
 
@@ -482,7 +482,7 @@
               <figure>
                 <img src="img/portfolio/envir6.jpg" style="height: 120%;" class="img-fluid" alt="">
                 <a href="img/portfolio/envir6.jpg" class="link-preview" data-lightbox="portfolio" data-title="天津市."
-                  title="Preview"><i class="ion ion-eye"></i></a>
+                  title="查看"><i class="ion ion-eye"></i></a>
                 <a href="#" class="link-details" title="Tianjin."><i class="ion ion-android-open"></i></a>
               </figure>
 
@@ -498,7 +498,7 @@
               <figure>
                 <img src="img/portfolio/envir4.jpg" style="height: 102%;" class="img-fluid" alt="">
                 <a href="img/portfolio/envir4.jpg" class="link-preview" data-lightbox="portfolio" data-title="山东青岛."
-                  title="Preview"><i class="ion ion-eye"></i></a>
+                  title="查看"><i class="ion ion-eye"></i></a>
                 <a href="#" class="link-details" title="Shandong Qingdao."><i class="ion ion-android-open"></i></a>
               </figure>
 
@@ -514,7 +514,7 @@
               <figure>
                 <img src="img/portfolio/envir3.jpg" class="img-fluid" alt="">
                 <a href="img/portfolio/envir3.jpg" class="link-preview" data-lightbox="portfolio" data-title="山东青岛."
-                  title="Preview"><i class="ion ion-eye"></i></a>
+                  title="查看"><i class="ion ion-eye"></i></a>
                 <a href="#" class="link-details" title="Shandong Qingdao."><i class="ion ion-android-open"></i></a>
               </figure>
 
@@ -530,7 +530,7 @@
               <figure>
                 <img src="img/portfolio/envir5.jpg" style="height: 120%;" class="img-fluid" alt="">
                 <a href="img/portfolio/envir5.jpg" class="link-preview" data-lightbox="portfolio" data-title="山东日照."
-                  title="Preview"><i class="ion ion-eye"></i></a>
+                  title="查看"><i class="ion ion-eye"></i></a>
                 <a href="#" class="link-details" title="Shandong Rizhao."><i class="ion ion-android-open"></i></a>
               </figure>
 
