--- a/index.html
+++ b/index.html
@@ -144,13 +144,13 @@
   ============================-->
   <section id="intro">
     <div class="intro-container">
-      <div id="introCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+      <div id="introCarousel" class="carousel slide" data-ride="carousel">
 
         <ol class="carousel-indicators"></ol>
 
         <div class="carousel-inner" role="listbox">
 
-          <div class="carousel-item active" style="background-image: url('img/intro-carousel/2.jpg');">
+          <div class="carousel-item active  carousel-fade" style="background-image: url('img/intro-carousel/2.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>非凡科技，成就非凡</h2>
@@ -160,7 +160,7 @@
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url('img/intro-carousel/4.jpg');">
+          <div class="carousel-item  carousel-fade" style="background-image: url('img/intro-carousel/4.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>相信非凡，活出精彩</h2>
@@ -170,7 +170,7 @@
             </div>
           </div>
 
-          <div class="carousel-item" style="background-image: url('img/intro-carousel/3.jpg');">
+          <div class="carousel-item  carousel-fade" style="background-image: url('img/intro-carousel/3.jpg');">
             <div class="carousel-container">
               <div class="carousel-content">
                 <h2>选择非凡，成就自我</h2>
@@ -198,7 +198,6 @@
   </section><!-- #intro -->
 
   <main id="main">
-
     <!--==========================
       企业特点
     ============================-->
